--- a/.github/workflows/checkmarx-analysis.yml
+++ b/.github/workflows/checkmarx-analysis.yml
@@ -31,7 +31,7 @@ jobs:
         #JAVA_TOOL_OPTIONS: '-Dhttps.proxyHost=1.1.1.1 -Dhttps.proxyPort=1234'
       uses: checkmarx-ts/checkmarx-cxflow-github-action@v1.3
       with:
-        project: GitHub-java_book_store_github_cxflow-${{ steps.get-branch.outputs.branch }}
+        project: GitHub-java_book_store_github_cxflow-test-${{ steps.get-branch.outputs.branch }}
         team: '/CxServer/SP/ANZ/CBA-GH-POC'
         checkmarx_url: ${{ secrets.CHECKMARX_URL }}
         checkmarx_username: ${{ secrets.CHECKMARX_USERNAME }}
@@ -41,7 +41,7 @@ jobs:
         break_build: false
         scanners: sast
         bug_tracker: Sarif
-        params: --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.ref }} --http-read-timeout=600000 --cx-flow.comment-script=CxComment.groovy  --cx-flow.filterSeverity --cx-flow.filterCategory --cx-flow.zip-exclude=\vendor\/.* #,.+\/vendor\/.*
+        params: --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.ref }} --http-read-timeout=600000 --cx-flow.comment-script=CxComment.groovy  --cx-flow.filterSeverity --cx-flow.filterCategory --cx-flow.zip-exclude=vendor\/.* ,.+\/vendor\/.* #,\.git/.*
     # Upload the Report for CodeQL/Security Alerts
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v1
