--- a/.github/workflows/checkmarx-analysis.yml
+++ b/.github/workflows/checkmarx-analysis.yml
@@ -39,7 +39,10 @@ jobs:
         checkmarx_client_secret: ${{ secrets.CHECKMARX_CLIENT_SECRET }}
         incremental: false
         break_build: false
-        preset: Checkmarx Default
+        #preset: Checkmarx Default
+        scan-resubmit: true
+        scan-queuing: true
+        scan-queuing-timeout: 720
         scanners: sast
         bug_tracker: Sarif
         params: --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.ref }} --http-read-timeout=600000 --cx-flow.comment-script=CxComment.groovy  --cx-flow.filterSeverity --cx-flow.filterCategory --cx-flow.zip-exclude=vendor\/.*,.+\/vendor\/.*#,\.git\/.*,\.github\/.*
